--- a/subfinder-config.yaml
+++ b/subfinder-config.yaml
@@ -9,7 +9,7 @@ chinaz: []
 dnsdb: []
 dnsrepo: []
 # fofa: ["123455@qq.com:key"]
-fofa: []
+fofa: ["test"]
 fullhunt: []
 github: []
 # hunter: ["123"]
